# tao-publisher

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  tox.ini
docs/: mkdocs.yml
docs/scripts/: gen_ref_pages.py
docs/source/: index.md
docs/source/developers/api_reference/: index.md
docs/source/usage/: api_reference.md  cli_reference.md  configuration.md  getting-started.md  installation.md
docs/source/users/: installation.md
docs/src/: index.md
docs/src/getting-started/: api_reference.md  cli_reference.md  usage.md
src/tao/: __init__.py  __main__.py  _cli.py  cli.py  client.py  config.py  core.py  exceptions.py  logging.py
src/tao/api/: __init__.py  _base.py  client.py  container.py  models.py
src/tao/api/endpoints/: __init__.py  _base.py  base.py  component.py  container.py  publish.py
src/tao/api/services/: __init__.py  _base.py  container.py
src/tao/models/: __init__.py  component.py  container.py  publish.py
src/tao/utils/: __init__.py  http.py
src/tao/utils/file/: __init__.py  exceptions.py  parser.py  writer.py
tests/: test_cli.py  test_package.py
